--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,26 +2,130 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="?actionBarSize"
-        android:background="@color/colorPrimary"
-        app:tabGravity="fill"
-        android:layout_gravity="center_horizontal"
-        app:tabIndicatorColor="#fff"
-        app:tabBackground="@color/red"
-        app:tabTextColor="#fff"
-        app:tabMaxWidth="0dp"
-        app:tabMode="fixed">
-    </com.google.android.material.tabs.TabLayout>
+<!--    <com.google.android.material.tabs.TabLayout-->
+<!--        android:id="@+id/tabLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:minHeight="?actionBarSize"-->
+<!--        android:background="@color/colorPrimary"-->
+<!--        app:tabGravity="fill"-->
+<!--        android:layout_gravity="center_horizontal"-->
+<!--        app:tabIndicatorColor="#fff"-->
+<!--        app:tabBackground="@color/red"-->
+<!--        app:tabTextColor="#fff"-->
+<!--        app:tabMaxWidth="0dp"-->
+<!--        app:tabMode="fixed">-->
+<!--    </com.google.android.material.tabs.TabLayout>-->
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager"
+<!--    <androidx.viewpager.widget.ViewPager-->
+<!--        android:id="@+id/viewPager"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+<!--    </androidx.viewpager.widget.ViewPager>-->
+
+
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/appbarId"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:background="@color/colorPrimaryDark"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:title="Hurry"-->
+<!--        app:titleTextColor="@color/white"-->
+<!--        android:fitsSystemWindows="true"-->
+<!--        >-->
+
+
+
+<!--    </androidx.appcompat.widget.Toolbar>-->
+<!--    <LinearLayout-->
+<!--        xmlns:tools="http://schemas.android.com/tools"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:orientation="vertical"-->
+<!--        android:fitsSystemWindows="true"-->
+<!--        android:layout_height="match_parent">-->
+<!--        <fragment-->
+<!--            android:id="@+id/fragment_container_view_tag"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_weight="1"-->
+<!--            app:navGraph = "@navigation/bottom_navigaiton"-->
+<!--            android:name="androidx.navigation.fragment.NavHostFragment"-->
+<!--            app:defaultNavHost="true"-->
+<!--            />-->
+
+<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--            android:layout_width="match_parent"-->
+<!--            app:menu="@menu/bottom_menu"-->
+<!--            android:id="@+id/navView"-->
+<!--            app:labelVisibilityMode="labeled"-->
+<!--            android:background="@color/white"-->
+<!--            android:layout_height="wrap_content"/>-->
+
+
+<!--    </LinearLayout>-->
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </androidx.viewpager.widget.ViewPager>
+        android:layout_height="match_parent"
+        tools:context=".activity.homePageActivity">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:background="@color/colorPrimary"
+            android:elevation="10dp"
+            app:title="Hurry DashBoard"
+            app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
+            app:titleTextColor="@color/white"
+            android:minHeight="?attr/actionBarSize"
+          />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/toolbar"
+            android:fitsSystemWindows="true"
+            android:layout_centerInParent="false"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="?attr/actionBarSize"
+            android:backgroundTint="@color/grey"
+            android:layout_alignBottom="@+id/bottom_navigation_"
+            android:layout_alignParentTop="false"
+            />
+
+
+
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation_"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:fitsSystemWindows="true"
+            app:itemIconTint="@drawable/nav_text_selector"
+            app:itemTextColor="@drawable/nav_text_selector"
+            android:background="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_menu" />
+
+
+    </RelativeLayout>
+
 </LinearLayout>
