--- a/app/src/main/res/layout/fragment_request_list.xml
+++ b/app/src/main/res/layout/fragment_request_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:background="@color/grey"
+        android:background="@color/backGroundColor"
         android:layout_height="match_parent"
         android:id="@+id/recyclerViewOnFramentRequestList"
 />
