--- a/app/src/main/res/layout/fragment_trip_list.xml
+++ b/app/src/main/res/layout/fragment_trip_list.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
     <ScrollView
         android:layout_width="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -398,5 +394,3 @@
         </LinearLayout>
 
     </ScrollView>
-
-</LinearLayout>
