--- a/app/src/main/res/layout/last_trip_view_module.xml
+++ b/app/src/main/res/layout/last_trip_view_module.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tripModule_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="1.5dp"
         app:cardElevation="8dp">
 
         <LinearLayout
