--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="?attr/actionBarSize"
-            android:backgroundTint="@color/grey"
+            android:background="@color/backGroundColor"
             android:layout_alignBottom="@+id/bottom_navigation_"
             android:layout_alignParentTop="false"
             />
