--- a/app/src/main/res/layout/activity_remaining_steps.xml
+++ b/app/src/main/res/layout/activity_remaining_steps.xml
@@ -41,7 +41,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/jose_san_bold"
-                        android:text="Welcome back, "
+                        android:text="Welcome , "
                         android:textColor="@color/black"
                         android:textSize="24sp" />
 
@@ -49,7 +49,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/jose_san_bold"
-                        android:text="Shaheen,"
+                        android:text="User"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
 
