--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,71 +30,73 @@
                 android:src="@drawable/hurry_logo_back"/>
 
             <LinearLayout
-                android:layout_gravity="center"
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_marginTop="25dp"
+                android:gravity="center"
                 android:orientation="vertical">
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:textColor="@color/colorPrimary"
+                    android:layout_gravity="center"
                     android:fontFamily="@font/jose_san_bold"
                     android:text="Mobile Verification"
-                    android:layout_gravity="center"/>
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="20sp" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/jose_san"
+                    android:layout_gravity="center"
                     android:layout_marginTop="8dp"
+                    android:fontFamily="@font/jose_san"
                     android:text="Please enter your mobile number"
-                    android:layout_gravity="center"/>
+                    android:textSize="16sp" />
+
                 <androidx.legacy.widget.Space
                     android:layout_width="match_parent"
                     android:layout_height="50dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_marginStart="35dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_height="55dp"
                     android:layout_gravity="center"
-
-                    android:layout_height="wrap_content">
+                    android:layout_marginStart="35dp"
+                    android:layout_marginEnd="35dp"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
                     <androidx.cardview.widget.CardView
-                        android:layout_marginStart="40dp"
                         android:layout_width="wrap_content"
-                        android:elevation="12dp"
-                        android:layout_height="40dp">
+                        android:layout_height="40dp"
+                        android:layout_marginStart="40dp"
+                        android:elevation="12dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:orientation="horizontal"
-                            android:layout_height="match_parent">
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
                             <ImageView
                                 android:layout_width="25dp"
-                                android:background="@drawable/bangladesh"
+                                android:layout_height="25dp"
                                 android:layout_gravity="center"
                                 android:layout_marginStart="5dp"
-                                android:layout_height="25dp" />
+                                android:background="@drawable/bangladesh" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="+88"
+                                android:layout_gravity="center"
                                 android:layout_marginStart="5dp"
                                 android:layout_marginEnd="5dp"
-                                android:textSize="16sp"
+                                android:text="+88"
                                 android:textColor="@color/black"
-                                android:layout_gravity="center"
-                                />
+                                android:textSize="16sp" />
 
 
                         </LinearLayout>
@@ -105,24 +107,22 @@
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="150dp"
-                        android:elevation="12dp"
-                        android:layout_marginStart="20dp"
                         android:layout_height="wrap_content"
-                        >
+                        android:layout_marginStart="20dp"
+                        android:elevation="12dp">
 
                         <EditText
                             android:id="@+id/phonenumEditText"
                             android:layout_width="match_parent"
-                            android:inputType="phone"
-                            android:textSize="16sp"
+                            android:layout_height="40dp"
                             android:layout_marginStart="8dp"
-                            android:textColor="@color/black"
-                            android:hint="0177334566"
                             android:background="#00000000"
-                            android:layout_height="40dp" />
+                            android:hint="0177334566"
+                            android:inputType="phone"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
 
                     </androidx.cardview.widget.CardView>
-
 
 
                 </LinearLayout>
@@ -136,32 +136,30 @@
                     android:id="@+id/nextBtnmobileverification"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
+                    android:layout_gravity="center"
                     android:layout_marginTop="50dp"
                     android:background="@drawable/circle_button"
-                    android:src="@drawable/ar"
-                    android:layout_gravity="center"
-                    android:padding="8dp"
                     android:foreground="?attr/selectableItemBackground"
-                    android:scaleType="fitXY"/>
+                    android:padding="8dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ar" />
+
                 <androidx.legacy.widget.Space
                     android:layout_width="match_parent"
                     android:layout_height="25dp" />
 
 
                 <TextView
+                    android:id="@+id/terms"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="35dp"
                     android:fontFamily="@font/jose_san"
                     android:text="Terms And Condition"
-                    android:layout_marginTop="35dp"
-                    android:layout_gravity="center"/>
-
-
-
+                    android:textSize="16sp" />
 
             </LinearLayout>
-
 
 
         </LinearLayout>
